--- a/latex/ecsproject.tex
+++ b/latex/ecsproject.tex
@@ -2,6 +2,7 @@
 \documentclass[11pt,a4paper]{book}
 \usepackage[utf8]{inputenc} % Norwegian letters
 \usepackage{amsmath,amsfonts,amssymb}
+\usepackage{natbib} % Need to use bibiliography other than plain.
 \usepackage{bm}
 \usepackage{float}  % Used for minipage and stuff.
 \usepackage{wrapfig} % Wrap text around figure wrapfig [tab]
