--- a/latex/simulations.tex
+++ b/latex/simulations.tex
@@ -294,10 +294,15 @@ Write about deviance splitting in CART\\
 \\
 Do bagging/RF with probs instead of vote. (The two different methods in Bagging section). Write something about how p should be faster for B around 0.5.\\
 \\
-Write about categorical variables after simulation study. \\
+Write about categorical variables after simulation study. In modstat 9.2.4. discussion for CART\\
 \\
 Comment on how the timing is not particularly good. \\
 \\
 Comment on how a tree can be deep, but split on the same variable multiple times?\\
 \\
 Maybe repeat some of experiments with added noise?
+
+\section{Questions}
+\label{sec:Questions}
+Should the bias-variance tradeoff be descussed before CART (as now), or inside the CART section?\\
+\\
