--- a/latex/project.Rnw
+++ b/latex/project.Rnw
@@ -66,7 +66,9 @@
 \end{appendices}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
-\bibliographystyle{plain}
+%\bibliographystyle{plain}
+%\bibliographystyle{apa}
+\bibliographystyle{authordate1}
 %\bibliography{referances}
 \bibliography{mybib}
 %\begin{thebibliography}{99} % At most 99 references.
